--- a/requirements.txt
+++ b/requirements.txt
@@ -6,14 +6,14 @@ distlib==0.3.1
 Django==3.1.3
 django_countries==7.2.1
 django-crispy-forms==1.10.0
-django-easy-pdf==0.1.1
+django-easy-pdf
 filelock==3.0.12
 gunicorn==20.1.0
 isort==5.6.4
 WeasyPrint==53.4
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
-phone_field==3.3.1
+django-phone-field
 Pillow==8.0.1
 pylint==2.6.0
 pytz==2020.4
