--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,49 @@
-appdirs==1.4.4
-asgiref==3.3.1
-astroid==2.4.2
-colorama==0.4.4
-distlib==0.3.1
-Django==3.1.3
-django_countries==7.2.1
-django-crispy-forms==1.10.0
-django-easy-pdf
-filelock==3.0.12
-gunicorn==20.1.0
-isort==5.6.4
-WeasyPrint==53.4
-lazy-object-proxy==1.4.3
-mccabe==0.6.1
-django-phone-field
-Pillow==8.0.1
-pylint==2.6.0
-pytz==2020.4
-six==1.15.0
-sqlparse==0.4.1
-toml==0.10.2
-virtualenv==20.1.0
-virtualenvwrapper-win==1.2.6
-whitenoise==5.2.0
-wrapt==1.12.1
+arabic-reshaper==3.0.0
+asgiref==3.9.2
+asn1crypto==1.5.1
+build==1.3.0
+certifi==2025.8.3
+cffi==2.0.0
+charset-normalizer==3.4.3
+click==8.3.0
+colorama==0.4.6
+crispy-bootstrap4==2025.6
+cryptography==46.0.1
+cssselect2==0.8.0
+Django==5.2.6
+django-countries==7.6.1
+django-crispy-forms==2.4
+django-easy-pdf==0.1.1
+django-phone-field==1.8.1
+freetype-py==2.5.1
+html5lib==1.1
+idna==3.10
+lxml==6.0.2
+oscrypto==1.3.0
+packaging==25.0
+pillow==11.3.0
+pip-tools==7.5.0
+pycairo==1.28.0
+pycparser==2.23
+pyHanko==0.31.0
+pyhanko-certvalidator==0.29.0
+pypdf==6.1.0
+pyproject_hooks==1.2.0
+python-bidi==0.6.6
+PyYAML==6.0.3
+reportlab==4.4.4
+requests==2.32.5
+rlPyCairo==0.4.0
+setuptools==80.9.0
+six==1.17.0
+sqlparse==0.5.3
+svglib==1.6.0
+tinycss2==1.4.0
+typing_extensions==4.15.0
+tzdata==2025.2
+tzlocal==5.3.1
+uritools==5.0.0
+urllib3==2.5.0
+webencodings==0.5.1
+wheel==0.45.1
+xhtml2pdf==0.2.17
